Fixed header to work in older FireFox versions. Updated JS to correctly open dashboard on firefox.

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -11,6 +11,7 @@
     padding-top: 4px;
     padding-bottom: 4px;
     background: -webkit-linear-gradient(bottom, #f6d075 16%, #f1b82d 75%);
+    background: -moz-linear-gradient(bottom, #f6d075 16%, #f1b82d 75%); /* For Firefox 3.6 to 15 */
 }
 
 .navbar-inverse .navbar-toggle .icon-bar{
